# mlops_iris

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: cicd-workflow.yml
notebooks/: .gitkeep  train_log_model.py
resources/: inference.app.yml
src/mlops_iris/: api.py  app.yml  config.py  main.py  requirements.txt  styles.css  ui.py
tests/: conftest.py  test_api.py  test_main.py  test_ui.py
