[project]
name = "mlops_iris"
version = "0.0.1"
authors = [{ name = "author@email.com" }]
requires-python = ">= 3.11"
dependencies = [
    "streamlit>=1.46.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # Code completion support for DLT, also install databricks-connect
    "databricks-dlt",
    # databricks-connect can be used to run parts of this project locally.
    # See https://docs.databricks.com/dev-tools/databricks-connect.html.
    #
    # Note, databricks-connect is automatically installed if you're using Databricks
    # extension for Visual Studio Code
    # (https://docs.databricks.com/dev-tools/vscode-ext/dev-tasks/databricks-connect.html).
    #
    # To manually install databricks-connect, uncomment the line below to install a version
    # of db-connect that corresponds to the Databricks Runtime version used for this project.
    # See https://docs.databricks.com/dev-tools/databricks-connect.html
    # "databricks-connect>=15.4,<15.5",
    "requests>=2.32.4",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_iris"]

[project.scripts]
main = "mlops_iris.main:main"

[tool.ruff]
line-length = 100

lint.select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
    "D",  # pydocstyle rules
]

lint.ignore = [
    "E501", # line-too-long
    "D203", # incorrect-blank-line-before-class
    "D213", # multi-line-summary-second-line
]


[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
